--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@ hr{
   display: grid;
   position: relative;
   padding: 25px;
-  width: 67%;
+  width: 66.5%;
   justify-content: center;
   justify-items: center;
   height: 150px;
@@ -1057,7 +1057,7 @@ Tiki N'Yiki de la par la vision qu'elle a implémenté souhaiterait que dans un 
       </strong>
     </span>
 <br>
-<br>Vues les innombrables défis sociaux comme les barrières sociales ci-dessus mentionnées, le manque fondamental d'infrastructures adaptées, les recurentes discriminations journalières , il est évident que les personnes handicapées seront lésées au quotidien, c'est-à-dire qu'elles n'auront pas la vie facile. Et c'est débile 
+<br>Vues les innombrables défis sociaux comme les barrières sociales ci-dessus mentionnées, le manque fondamental d'infrastructures adaptées, les recurentes discriminations journalières, il est évident que les personnes handicapées seront lésées au quotidien, c'est-à-dire qu'elles n'auront pas la vie facile. Et c'est débile 
 que les gouvernements font peu de choses pour les aider financièrement en termes de donner un chèque mensuel aux personnes qui ne peuvent pas travailler. 
 Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin de rêver dans le futur. 
         <br><br>
@@ -1241,7 +1241,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                 Au délà des soutiens à travers les donations d'ami-es, la vente d'artisanat dans les festivals d'été, l'idée fondamentale est de bâtir un large réseau de donateurs, de bénévoles tout genre confondu, d'un conseil d'administration pour mieux encadrer la vision et faire émerger l'idée de projet en résultats concrêts profitant des personnes handicapées dans leurs besoins-cibles. Ce fut le début d'un rêve qu'il veut à tout prix réaliser et aider à améliorer les conditions sociales des personnes vulnérables et plus particulièrement les personnes vivant avec un handicap dont les enfants handicapés. 
                 <br>
                 <br>
-                Malheureusement et heureusement Gabriel était obligé de fuir son pays le Burkina Faso en 2017 pour se réfugier au Canada pour sa sécurité parce que son pays natal a basculé dans un cycle infernal de violence causée par un terrorisme sanguinaire. Présentement Gabriel est un résident permanent Canadien. Il veut continuer de faire vivre la vision de Tiki N'Yiki dont il s'est fixée, de loin, afin aider dans l'éducation et l'épamouissement de tous les enfants handicapés pour qu'ils rencontrent des opportunités et réaliser leurs rêves au Burkina Faso.
+                Malheureusement et heureusement Gabriel était obligé de fuir son pays le Burkina Faso en 2017 pour se réfugier au Canada pour sa sécurité parce que son pays natal a basculé dans un cycle infernal de violence causée par un terrorisme sanguinaire. Présentement Gabriel est un résident permanent Canadien. Il veut continuer de faire vivre la vision de Tiki N'Yiki dont il s'est fixée, de loin, afin d'aider dans l'éducation et l'épamouissement des enfants handicapés pour qu'ils rencontrent des opportunités et pouvoir réaliser leurs rêves.
                 <br>
                 <br>
                 <b style="font-family: georgia; color: rgb(24, 24, 131); font-size: 20px">Merci pour votre attention et vos différents soutiens ! </b>
