--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ hr{
   justify-content: center;
   justify-items: center;
   height: 150px;
-  color:rgba(82, 82, 82, 0.932);
+  color:rgba(0, 0, 0, 0.932);
   margin-top: 2rem;
   margin-left: 13rem;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 14px;
@@ -973,7 +973,7 @@ function myFunction() {
            
             <div class="CRT1">
             
-        Le Burkina Faso est un pays sahélien, enclavé, situé au coeur de l'Afrique de l'ouest s'étendant à peu sur une superficie de <em style="color: rgba(0, 58, 247, 0.952)">274.300 kilomètres carrés et peuplé de 22.1 millions d'habitants. Il partage des frontières au nord; nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin.</em> Il bénéficie d'un climat tropical sec de type sahélien caracterisé par 4 mois de pluviométrie et 8 mois de sécheresse. Malgré cela son économie se repose en grande partie sur les activités agro-pastorales bien qu'elle commence à se diversifier pour toucher le secteur de services ou même le numérique.
+        Le Burkina Faso est un pays sahélien, enclavé, situé au coeur de l'Afrique de l'ouest s'étendant à peu sur une superficie de <em style="color: red">274.300 kilomètres carrés et peuplé de 22.1 millions d'habitants. Il partage des frontières au nord; nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin.</em> Il bénéficie d'un climat tropical sec de type sahélien caracterisé par 4 mois de pluviométrie et 8 mois de sécheresse. Malgré cela son économie se repose en grande partie sur les activités agro-pastorales bien qu'elle commence à se diversifier pour toucher le secteur de services ou même le numérique.
         Malgré une population croissante de personnes handicapées dûe aux séquelles de la polio à d'autres maladies, la vieillesse ou les cas accidentaux, il est fréquent d'observer qu'un grand nombre de personnes handicapées sont toujours sous-estimées et ignorées. 
   
         Ceci n'est pas seulement causé par une culture d'exclusion due aux barrières sociales,
