--- a/index.html
+++ b/index.html
@@ -1062,7 +1062,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
          Dans certaines familles il n'y a aucun doute que des enfants handicapés ne soient pas toujours privilégiés par rapport à certains enfants dits nornaux. Dans la plupart des cas la priorité est portée sur les enfants dits normaux. Mais en agissant de la sorte les parents, eux-mêmes discriminent leurs propres enfants sur la base de son handicap. Cela est dangereux pour l'enfant car il rsique de faire face à une suppression de ses propres droits par ses propres parents.  
         <br>
         <br>
-        <em style="color:rgba(0, 8, 247, 0.952)"> Les problèmes sont une légion, variés, dures, à differents niveaux mais sont défiables aussi.</em> 
+        <em style="color:rgba(0, 8, 247, 0.952)"> Les problèmes sont une légion, dures, variés mais sont défiables aussi.</em> 
         <br>
         Il est impensable de voir que des personnes handicapées ne soient pas à mesure de partir à l'hôpital quand elles tombent malades, aller étudier ou sortir pour une simple visite faute de moyens de transport. Elles n'ont pas la possibilité de le faire. Elles n'ont pas de voitures, de motos ni même des tricycles 
         pour le déplacement. Elles vivent isolées et ceci rend difficile leurs vies car toute personne a souvent besoin de sociabiliser. 
