--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@ function myFunction() {
         <img src="https://accessibleicon.org/img/accessible-icon.jpg" alt="Disability Logo">
       </div>
 
-      <div class="DAHO"> 
+      <div class="DAHO" style="color:rgba(18, 18, 18, 0.937)"> 
         Le handicap n'est pas une Fatalité
       </div>
     
@@ -801,7 +801,7 @@ function myFunction() {
       </div>
 
     
-      <div class="HAE">
+      <div class="HAE" style="color:rgba(18, 18, 18, 0.937)">
         Paysage du Burkina Faso avec un baobab 
         </div>
       </a>
