--- a/index.html
+++ b/index.html
@@ -1247,15 +1247,18 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                   </strong>
                 </span>            
                     <p>
-                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel COMPAORE, une personne handicapée ayant enseigné des enfants handicapés. Il est aussi un libre codeur. Il a designé et codé avec HTML et CSS ce site web statique pour mieux présenter sa vision de Tiki N'Yiki. Il est aussi passionné de photographie. Selon lui l'envie d'aider autrui en particulier les enfants handicapés, a motivé la création de la vision de TIKI N'YIKI durant l'année 2016 au Burkina Faso, son pays d'origine.
+                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel COMPAORE, une personne handicapée ayant enseigné des enfants handicapés. Il est aussi un libre codeur. Il a designé et codé avec HTML et CSS ce site web statique pour mieux présenter sa vision de Tiki N'Yiki. Il est aussi passionné de photographie. 
+                      <br>
+                      <br> 
+                      Selon lui l'envie d'aider autrui en particulier les enfants handicapés, a motivé la création de la vision de TIKI N'YIKI durant l'année 2016 au Burkina Faso, son pays d'origine.
                 <br>
                 Bien avant il avait travaillé de 2005 à 2016 comme animateur dans une association nommée Paas Neere. Sa motivition est innée. Et quand il a partagé son idée de projet avec certains de ses ami-es qui l'ont trouvé géniale et l'ont assuré leur soutien total. 
                 <br>
                 <br>
-                Au délà des soutiens à travers les donations d'ami-es, la vente d'artisanat dans les festivals d'été, l'idée fondamentale est de bâtir un large réseau de donateurs, de bénévoles tout genre confondu, d'un conseil d'administration pour mieux encadrer la vision et faire émerger l'idée de projet en résultats concrêts profitant des personnes handicapées dans leurs besoins-cibles. Ce fut le début d'un rêve qu'il veut à tout prix réaliser et aider à améliorer les conditions sociales des personnes vulnérables et plus particulièrement les personnes vivant avec un handicap dont les enfants handicapés. 
+                Au délà des soutiens à travers des donations d'ami-es, la vente d'artisanat dans les festivals d'été, l'idée fondamentale est de bâtir un large réseau de donateurs, d'un conseil d'administration pour mieux encadrer la vision et faire émerger l'idée de projet en résultats concrêts profitant des personnes handicapées dans leurs besoins cibles. Ce fut le début d'un rêve qu'il veut à tout prix réaliser et aider à améliorer les conditions sociales des personnes vulnérables et plus particulièrement les personnes vivant avec un handicap dont les enfants handicapés. 
                 <br>
                 <br>
-                Malheureusement et heureusement Gabriel était obligé de fuir son pays le Burkina Faso en 2017 pour se réfugier au Canada pour sa sécurité parce que son pays natal a basculé dans un cycle infernal de violence causée par un terrorisme sanguinaire. Présentement Gabriel est un résident permanent Canadien. Il veut continuer de faire vivre la vision de Tiki N'Yiki dont il s'est fixée, de loin, afin d'aider dans l'éducation et l'épamouissement des enfants handicapés pour qu'ils rencontrent des opportunités et pouvoir réaliser leurs rêves.
+                Malheureusement et heureusement Gabriel était obligé de fuir son pays le Burkina Faso en 2017 pour se réfugier au Canada pour sa sécurité parce que son pays natal a basculé dans un cycle infernal de violence causée par un terrorisme sanguinaire. Présentement Gabriel est un résident permanent Canadien. Il veut continuer de faire vivre la vision de Tiki N'Yiki dont il s'est fixée, de loin, afin d'aider dans l'éducation et l'épanouissement des enfants handicapés pour qu'ils rencontrent des opportunités et pouvoir réaliser leurs rêves.
                 <br>
                 <br>
                 <b style="font-family: georgia; color: rgb(24, 24, 131); font-size: 20px">Merci pour votre attention et vos différents soutiens ! </b>
