--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@ hr{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
     font-size: 22px;
     color: rgba(28, 28, 28, 0.959);
-    line-height: 30px;
+    line-height: 28px;
     padding: 10px;
   
 }
@@ -612,7 +612,7 @@ hr{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
     font-size: 22px;
     color: rgba(28, 28, 28, 0.959);
-    line-height: 30px;
+    line-height: 28px;
     margin-top: -1rem;
 }
 
@@ -901,10 +901,10 @@ function myFunction() {
 
   <a href="https://www.hawking.org.uk/" target="_blank">
 
-  <div class="YT" style="line-height: 32px; font-size: 24.4px; text-align: justify; color:rgba(0, 0, 0, 0.937); font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"> 
+  <div class="YT" style="line-height: 32px; font-size: 24.4px; text-align: justify; color:rgb(0, 0, 0); font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"> 
     "Mon conseil aux autres personnes handicapées serait, de se concentrer 
     sur les choses que leur handicap ne les empêche pas de bien faire et de ne pas regretter les choses avec lesquelles il interfère. 
-    Ne soyez handicapé ni mentalement, ni physiquement" <em style="color: #ff0a06; font-size: 20px;">[ Stephen Hawkings, metaphysicien et auteur Anglais ]</em>
+    Ne soyez handicapé ni mentalement, ni physiquement" <em style="color: rgb(0, 174, 255); font-size: 20px;">[ Stephen Hawkings, métaphysicien et auteur Anglais ]</em>
   </div> 
 
 </a> 
