--- a/index.html
+++ b/index.html
@@ -1247,14 +1247,16 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                   </strong>
                 </span>            
                     <p>
-                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel COMPAORE, une personne handicapée ayant enseigné des enfants handicapés. Il est aussi un libre codeur. Il a designé et codé avec HTML et CSS ce site web statique pour mieux présenter sa vision de Tiki N'Yiki. Il est aussi passionné de photographie. 
+                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel COMPAORE, une personne handicapée qui a enseigné des enfants handicapés au Burkina Faso. Libre codeur il a designé et codé avec HTML et CSS ce site web statique qu'il est en train de devélopper pour mieux présenter sa vision de Tiki N'Yiki. Il est un passionné de photographie. 
                       <br>
                       <br> 
                       Selon lui l'envie d'aider autrui en particulier les enfants handicapés, a motivé la création de la vision de TIKI N'YIKI durant l'année 2016 au Burkina Faso, son pays d'origine.
                 <br>
-                Bien avant il avait travaillé de 2005 à 2016 comme animateur dans une association nommée Paas Neere. Sa motivition est innée. Et quand il a partagé son idée de projet avec certains de ses ami-es qui l'ont trouvé géniale et l'ont assuré leur soutien total. 
+                Mais bien avant il avait travaillé de 2005 à 2016 comme fondateur, cordonnateur et animateur dans l'association Paas Neere dans laquelle il a été décoré CHEVALIER de l'ordre du Mérite par l'état du Burkina Faso pour ses diverses contributions à l'épanoussement des personnes handicapées de sa région, Ziniaré. 
                 <br>
                 <br>
+                Sa motivition est innée. Et quand il a partagé son idée de projet avec certains de ses ami-es qui l'ont trouvé géniale et l'ont assuré leur soutien total. 
+                
                 Au délà des soutiens à travers des donations d'ami-es, la vente d'artisanat dans les festivals d'été, l'idée fondamentale est de bâtir un large réseau de donateurs, d'un conseil d'administration pour mieux encadrer la vision et faire émerger l'idée de projet en résultats concrêts profitant des personnes handicapées dans leurs besoins cibles. Ce fut le début d'un rêve qu'il veut à tout prix réaliser et aider à améliorer les conditions sociales des personnes vulnérables et plus particulièrement les personnes vivant avec un handicap dont les enfants handicapés. 
                 <br>
                 <br>
