--- a/index.html
+++ b/index.html
@@ -1252,7 +1252,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                       <br> 
                       Selon lui l'envie d'aider autrui en particulier les enfants handicapés, a motivé la création de la vision de TIKI N'YIKI durant l'année 2016 au Burkina Faso, son pays d'origine.
                 <br>
-                Mais bien avant il avait travaillé de 2005 à 2016 comme fondateur, cordonnateur et animateur dans l'association Paas Neere dans laquelle il a été décoré CHEVALIER de l'ordre du Mérite par l'état du Burkina Faso pour ses diverses contributions à l'épanoussement des personnes handicapées de sa région, Ziniaré. 
+                Mais bien avant il avait travaillé de 2005 à 2016 comme fondateur, cordonnateur et animateur pour l'association Paas Neere. En 2012 il a été décoré CHEVALIER de l'ordre du Mérite par l'état du Burkina Faso pour ses diverses contributions à l'épanoussement des personnes handicapées de sa région, Ziniaré. 
                 <br>
                 <br>
                 Sa motivition est innée. Et quand il a partagé son idée de projet avec certains de ses ami-es qui l'ont trouvé géniale et l'ont assuré leur soutien total. 
