--- a/index.html
+++ b/index.html
@@ -1010,8 +1010,9 @@ function myFunction() {
         </div>
 
         <div class="k1">
-         C'est une lutte incessante dont l'objectif primordial est d'atteindre l'inclusion sociale. Pouvoir vivre décemment malgré le handicapé.
+         C'est une lutte incessante dont l'objectif primordial est d'atteindre l'inclusion sociale. Pouvoir vivre décemment malgré le handicap.
          D'aucuns savent que vivre avec un handicap est synonyme d'endurance de multiples barrières sociales. Mais au-délà c'est aussi apprendre de la société et forger une certaine personnalité pour résister.  
+         <br>
          <br>
          En Afrique et particulièrement au Burkina Faso, certaines personnes handicapées se sentent très souvent comme des citoyens de seconde classe du fait de la négligence, de l'exclusion dont elles sont victimes chaque jour. Si elles vivent exclues comme une île au milieu d'un océan sans aucune connection avec la terre ferme, avoir des opportunités sera sans doute très rare. 
          Le fait que des gens qui étaient censés être aidés les premiers, se retrouvent complètement oubliés et relégués aux rangs derniers, est non seulement une erreur sociale mais indique le niveau des mentalités des un-es et des autres. 
