--- a/index.html
+++ b/index.html
@@ -578,10 +578,10 @@ hr{
     text-align: left;
     width: 73%;
     height: auto;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
-    font-size: 20.3px; 
-    color: rgba(19, 19, 19, 0.959);
-    line-height: 24.65px;
+    font-family:  'helvetica'; 
+    font-size: 1.11rem; 
+    color: rgba(6, 6, 6, 0.959);
+    line-height: 25px;
     padding: 10px;
   
 }
@@ -592,12 +592,12 @@ hr{
 }
 .Cartes{
   display: grid;
-  row-gap: 2rem;
+  row-gap: 0.5rem;
   grid-template-rows: 1.5fr 0.5fr;
   justify-content: center;
   justify-items: center;
   padding: 10px;
-  height: 748px;
+  height: 720px;
   width: 73.25%;
 }
 
@@ -609,10 +609,10 @@ hr{
     text-align: left;
     width: 100%;
     height: 120px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; 
-    font-size: 20.26px; 
-    color: rgba(19, 19, 19, 0.959);
-    line-height: 25px;
+    font-family:  'helvetica'; 
+    font-size: 1.11rem; 
+    color: rgba(6, 6, 6, 0.959);
+    line-height: 24.65px;
     margin-top: -1rem;
 }
 
