--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
     <meta charset="UTF-8">
@@ -597,7 +597,7 @@ hr{
   justify-content: center;
   justify-items: center;
   padding: 10px;
-  height: 720px;
+  height: 715px;
   width: 73.25%;
 }
 
@@ -608,7 +608,7 @@ hr{
     justify-content: center;
     text-align: left;
     width: 100%;
-    height: 120px;
+    height: 100px;
     font-family:  'helvetica'; 
     font-size: 1.11rem; 
     color: rgba(6, 6, 6, 0.959);
@@ -901,7 +901,7 @@ function myFunction() {
 
   <a href="https://www.hawking.org.uk/" target="_blank">
 
-  <div class="YT" style="line-height: 30px; font-size: 24.4px; text-align: justify; color:rgb(0, 0, 0); font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"> 
+  <div class="YT" style="line-height: 29px; font-size: 24px; text-align: justify; color:rgb(0, 0, 0); font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"> 
     "Mon conseil aux autres personnes handicapées serait, de se concentrer 
     sur les choses que leur handicap ne les empêche pas de bien faire et de ne pas regretter les choses avec lesquelles il interfère. 
     Ne soyez handicapé ni mentalement, ni physiquement" <em style="color: rgb(0, 174, 255); font-size: 20px;">[ Stephen Hawkings, métaphysicien et auteur Anglais ]</em>
@@ -973,7 +973,7 @@ function myFunction() {
            
             <div class="CRT1">
             
-        Le Burkina Faso est un pays sahélien, enclavé, situé au coeur de l'Afrique de l'ouest s'étendant à peu sur une superficie de 
+        Le Burkina Faso est un pays sahélien, enclavé au coeur de l'Afrique de l'ouest et vaste d'à peu près 
         <em style="color: red">274.300 kilomètres carrés et peuplé de 22.1 millions d'habitants. Il partage des frontières au nord; nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin.
         </em> Il bénéficie d'un climat tropical sec de type sahélien caracterisé par 4 mois de pluviométrie et 8 mois de sécheresse. En dépit de cela son économie se repose en grande partie sur l'agriculture, l'élévage ou le maraîchage même si elle commence à se diversifier pour toucher le secteur de services ou le secteur du numérique.
       <br>
