--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
     <meta charset="UTF-8">
@@ -520,7 +520,7 @@ hr{
     font-size: 12px;
     color:#000;
     margin-left: 12%; 
-    margin-top: 3.65rem;
+    margin-top: 3.63rem;
 }
 
 .k1-image img{
@@ -780,7 +780,7 @@ function myFunction() {
         <img src="https://accessibleicon.org/img/accessible-icon.jpg" alt="Disability Logo">
       </div>
 
-      <div class="DAHO" style="color:rgba(7, 7, 7, 0.937)"> 
+      <div class="DAHO" style="color:rgb(0, 0, 0)"> 
         Le handicap n'est pas une Fatalité
       </div>
     
@@ -801,7 +801,7 @@ function myFunction() {
       </div>
 
     
-      <div class="HAE" style="color:rgba(7, 7, 7, 0.937)">
+      <div class="HAE" style="color:rgb(0, 0, 0)">
         Paysage du Burkina Faso avec un baobab 
         </div>
       </a>
@@ -904,7 +904,7 @@ function myFunction() {
   <div class="YT" style="line-height: 29px; font-size: 24px; text-align: justify; color:rgb(0, 0, 0); font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;"> 
     "Mon conseil aux autres personnes handicapées serait, de se concentrer 
     sur les choses que leur handicap ne les empêche pas de bien faire et de ne pas regretter les choses avec lesquelles il interfère. 
-    Ne soyez handicapé ni mentalement, ni physiquement" <em style="color: rgb(0, 174, 255); font-size: 20px;">[ Stephen Hawkings, métaphysicien et auteur Anglais ]</em>
+    Ne soyez handicapé ni mentalement, ni physiquement" <em style="color: rgb(0, 149, 255); font-size: 20px;">[ Stephen Hawkings, métaphysicien et auteur Anglais ]</em>
   </div> 
 
 </a> 
