--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 .footer{
         display: flex;
         width: 100%;
-        height: 390px;
+        height: 360px;
         position: relative;
         font-family: 'trebuchet ms';
         font-size: 16px;
@@ -991,7 +991,9 @@ function myFunction() {
             <div>
             <img src="https://previews.123rf.com/images/michal812/michal8121306/michal812130600184/20531769-burkina-faso-on-actual-vintage-political-map-of-africa-with-flags.jpg" alt="Africa">
             <figure>
-              <figcaption style=" margin-top: 0.1rem; color: #2e2e2e; font-family: 'verdana'; font-size: 12px; text-align: left;">Carte du Burkina Faso en Afrique </figcaption>
+              <figcaption style=" margin-top: 0.1rem; color: #055ce8; font-family: 'verdana'; font-size: 12px; text-align: left;">
+                Carte du Burkina Faso en Afrique 
+              </figcaption>
               </figure>
             </div>
           </a>
@@ -1000,7 +1002,9 @@ function myFunction() {
           <div>
          <img src="https://ow-prayer-api.info/files/en/images/main-maps/burk-02.png" alt="Carte du Burkina Faso">
          <figure>
-          <figcaption style=" margin-top: 0.1rem; color: #2e2e2efa; font-family: 'verdana'; font-size: 12px; text-align: left;">Carte du Burkina Faso avec les pays frontaliers et sa capitale OUAGADOUGOU</figcaption>
+          <figcaption style=" margin-top: 0.1rem; color: #055ce8; font-family: 'verdana'; font-size: 12px; text-align: left;">
+            Carte du Burkina Faso avec les pays frontaliers et sa capitale OUAGADOUGOU
+          </figcaption>
           </figure>
         </div>
       </a>
@@ -1024,7 +1028,9 @@ Tiki N'Yiki de la par la vision qu'elle a implémenté souhaiterait que dans un 
 
 <img src="https://www.zupimages.net/up/22/21/di3p.jpg" style="width: 98%" alt="Percussion djembé">
 <figure>
-<figcaption style=" color:rgb(103, 103, 103); font-family: 'verdana'; font-size: 15px; text-align: left;">Après les cours de soutien, la percussion est un moment préféré des enfants</figcaption>
+<figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 14px; text-align: left;">
+  Après les cours de soutien, la percussion est un moment préféré des enfants
+</figcaption>
 </figure>
 </div>
 
@@ -1144,7 +1150,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     
         <img src="https://www.zupimages.net/up/22/21/3bad.jpg" alt="Enseignement au Burkina Faso">
         <figure>
-        <figcaption style=" color:rgb(103, 103, 103); font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: 3px;">
+        <figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: 3px;">
         Enseigner et améliorer l'éducation au
         <a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="_blank">Burkina Faso</a>
     </figcaption>
@@ -1167,7 +1173,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         </p>
           <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt="Centre hospitalier régional">
         <figure>
-          <figcaption style=" color:rgb(103, 103, 103); font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: 3px;">
+          <figcaption style=" color: #055ce8; font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: 3px;">
             Centre hospitalier régional
             </figcaption>
     </figure>
@@ -1199,7 +1205,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
         </p>
         <img src="https://www.zupimages.net/up/22/51/99tx.jpg" alt="Vivres à distribuer aux étudiant-es handicapé-es">
         <figure>
-          <figcaption style=" color:rgb(103, 103, 103); font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: -1px;">
+          <figcaption style=" color:#055ce8; font-family: 'verdana'; font-size: 14px; text-align: left; margin-top: -1px;">
             Vivres et fournitures scolaires à distribuer aux enfants handicapés
             </figcaption>
     </figure>
@@ -1237,7 +1243,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
       <div class="k1">
            <img src="https://www.zupimages.net/up/22/29/epkw.jpg" alt="Nettoyage de sacs plastiques">
            <figure>
-        <figcaption style="font-family: 'verdana'; margin-top: 5px; font-size: 14px; color: rgb(68, 68, 68)">
+        <figcaption style="font-family: 'verdana'; margin-top: 5px; font-size: 14px; color: #055ce8">
             Nettoyage de sacs plastiques
         </figcaption> 
     </figure>
@@ -1269,7 +1275,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                 Malheureusement et heureusement Gabriel était obligé de fuir son pays le Burkina Faso en 2017 pour se réfugier au Canada pour sa sécurité parce que son pays natal a basculé dans un cycle infernal de violence causée par un terrorisme sanguinaire. Présentement Gabriel est un résident permanent Canadien. Il veut continuer de faire vivre la vision de Tiki N'Yiki dont il s'est fixée, de loin, afin d'aider dans l'éducation et l'épanouissement des enfants handicapés pour qu'ils rencontrent des opportunités et pouvoir réaliser leurs rêves.
                 <br>
                 <br>
-                <b style="font-family: georgia; color: rgb(24, 24, 131); font-size: 20px">Merci pour votre attention et vos différents soutiens ! </b>
+                <b style="font-family: georgia; color: #055ce8; font-size: 20px">Merci pour votre attention et vos différents soutiens ! </b>
 
               </p> 
       </div>
@@ -1277,7 +1283,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
     <div class="k1">
     <img src="https://www.zupimages.net/up/23/22/znug.jpg" alt="At Saint-Côme-Quebec">
   <figure>
-    <figcaption style="font-family: 'verdana'; margin-top: 5px; font-size: 12px; color: rgba(103, 103, 103, 0.895)">
+    <figcaption style="font-family: 'verdana'; margin-top: 5px; font-size: 12px; color: #055ce8">
     Saint-Côme dans Lanaudière au Québec [Canada/Juin 2023]
   </figcaption> 
 </figure>
