--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       width: 100%;
       height: 1.5rem;
       font-family: georgia;
-      font-size: 15px;
+      font-size: 20px;
       color:  rgba(13, 122, 199, 0.957);
       padding: 5px;
       margin-top: -1rem;
@@ -100,8 +100,8 @@
       width: 100%;
       height: 1.5rem;
       font-family: georgia;
-      font-size: 15px;
-       color:  rgba(13, 122, 199, 0.957);
+      font-size: 20px;
+      color:  rgba(13, 122, 199, 0.957);
       padding: 5px;
       margin-top: -1rem;
     }
@@ -121,7 +121,7 @@
       width: 100%;
       height: 1.5rem;
       font-family: georgia;
-      font-size: 15px;
+      font-size: 20px;
       color:  rgba(13, 122, 199, 0.957);
       padding: 5px;
       margin-top: -1rem;
@@ -142,8 +142,8 @@
       width: 100%;
       height: 1.5rem;
       font-family: georgia;
-      font-size: 15px;
-       color:  rgba(13, 122, 199, 0.957);
+      font-size: 20px;
+      color:  rgba(13, 122, 199, 0.957);
       padding: 5px;
       margin-top: -1rem;
     }
@@ -487,10 +487,11 @@ hr{
   height: 150px;
   margin-left: 13rem;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
- line-height: 29px; 
- font-size: 24.24px; 
+ line-height: 26px; 
+ font-size: 24px; 
  text-align: justify; 
- color:rgba(111, 111, 111, 0.957);
+ color:rgba(128, 127, 127, 0.957);
+ word-spacing: 1px;
 }
 
 .button2{
@@ -591,7 +592,7 @@ hr{
     color: rgba(6, 6, 6, 0.959);
     line-height: 25px;
     padding: 10px;
-  
+    word-spacing: 1px;
 }
 .k1 img{
   width: 99%;
@@ -600,12 +601,12 @@ hr{
 }
 .Cartes{
   display: grid;
-  row-gap: 0.5rem;
+  row-gap: 1rem;
   grid-template-rows: 1.5fr 0.5fr;
   justify-content: center;
   justify-items: center;
   padding: 10px;
-  height: 715px;
+  height: 725px;
   width: 73.25%;
 }
 
@@ -616,17 +617,17 @@ hr{
     justify-content: center;
     text-align: left;
     width: 100%;
-    height: 100px;
+    height: auto;
     font-family:  'helvetica'; 
     font-size: 1.11rem; 
     color: rgba(6, 6, 6, 0.959);
     line-height: 24.65px;
-    margin-top: -1rem;
+    word-spacing: 1px;
 }
 
 .CRT2{
   width: 100%;
-  height: 320px;
+  height: 290px;
   display: grid;
   grid-template-columns: 0.8fr 1.5fr;
   column-gap: 0.1rem;
@@ -972,7 +973,7 @@ function myFunction() {
   
         Ceci n'est pas seulement causé par une culture d'exclusion dûe aux barrières sociales,
         mais aussi par un manque de légifération substantielle sur le handicap et la vie des handicapés. 
-       <b style="color:rgb(0, 0, 0)"> Que c'est difficile pour les personnes handicapées de lutter pour avoir leurs droits.</b>  
+       Que c'est difficile pour les personnes handicapées de lutter pour avoir leurs droits.  
         
         </div>
 
