--- a/index.html
+++ b/index.html
@@ -599,6 +599,21 @@ hr{
   height: 650px;
   background: #fff;
 }
+.kgp{
+  display: grid;
+    background: #fff;
+    justify-items: center;
+    justify-content: center;
+    text-align: left;
+    width: 100%;
+    height: auto;
+}
+.kgp img{
+  width: 55%;
+    height: auto;
+    border-radius: 50%;
+}
+
 .Cartes{
   display: grid;
   row-gap: 1rem;
@@ -1266,12 +1281,17 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                 Malheureusement et heureusement Gabriel était obligé de fuir son pays le Burkina Faso en 2017 pour se réfugier au Canada pour sa sécurité parce que son pays natal a basculé dans un cycle infernal de violence causée par un terrorisme sanguinaire. Présentement Gabriel est un résident permanent Canadien. Il veut continuer de faire vivre la vision de Tiki N'Yiki dont il s'est fixée, de loin, afin d'aider dans l'éducation et l'épanouissement des enfants handicapés pour qu'ils rencontrent des opportunités et pouvoir réaliser leurs rêves.
                 <br>
                 <br>
-                <b style="font-family: georgia; color: #055ce8; font-size: 20px">Merci pour votre attention et vos différents soutiens ! </b>
-
-              </p> 
+                  </p> 
       </div>
 
-    <div class="k1">
+    <div class="Thanking" style="padding: 1rem; margin-top: -3rem;"> <b style="font-family: georgia; color: #055ce8; font-size: 20px">
+      Merci pour votre attention et vos différents soutiens ! 
+    </b>
+  </div>
+
+            
+
+    <div class="kgp">
     <img src="https://www.zupimages.net/up/23/22/znug.jpg" alt="At Saint-Côme-Quebec">
   <figure>
     <figcaption style="font-family: 'verdana'; margin-top: 5px; font-size: 12px; color: #055ce8">
