--- a/index.html
+++ b/index.html
@@ -487,10 +487,10 @@ hr{
   height: 150px;
   margin-left: 13rem;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
- line-height: 26px; 
- font-size: 24px; 
- text-align: justify; 
- color:rgba(128, 127, 127, 0.957);
+ line-height: 25px; 
+ font-size: 23.7px; 
+ text-align: left; 
+ color:rgba(132, 130, 130, 0.975);
  word-spacing: 1px;
 }
 
@@ -529,7 +529,7 @@ hr{
     font-size: 12px;
     color:#000;
     margin-left: 12%; 
-    margin-top: -1rem;
+    margin-top: -1.5rem;
 }
 
 .k1-image img{
