--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@ function myFunction() {
 
 </div>
 
-<div class="navbar0"><p style="margin-top: 2.5rem; margin-left: 7rem;">Bienvenue ! Ce site est en devéloppement. Bonne Visite !</p></div>
+<div class="navbar0"><p style="margin-top: 2.5rem; margin-left: 7rem;">Bienvenue ! Ce site est en développement. Bonne Visite !</p></div>
 
 <div class="fwrapper">
 
