--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.5rem solid rgba(24, 126, 189, 0.996);
+                 border-bottom: 0.85rem solid rgba(24, 126, 189, 0.996);
                  box-shadow: 0 2px 4.3rem 3px rgba(24, 126, 189, 0.534);
           }
           
@@ -187,7 +187,7 @@
   border: 0.1rem solid #dd346faa;
   color:darkblue;
   padding: 4px;
-  margin-top: -4px;
+  margin-top: -6px;
   margin-left: -3rem;
 }
 
@@ -1278,7 +1278,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                 Au délà des soutiens à travers des donations d'ami-es, la vente d'artisanat dans les festivals d'été, l'idée fondamentale est de bâtir un large réseau de donateurs, d'un conseil d'administration pour mieux encadrer la vision et faire émerger l'idée de projet en résultats concrêts profitant des personnes handicapées dans leurs besoins cibles. Ce fut le début d'un rêve qu'il veut à tout prix réaliser et aider à améliorer les conditions sociales des personnes vulnérables et plus particulièrement les personnes vivant avec un handicap dont les enfants handicapés. 
                 <br>
                 <br>
-                Malheureusement et heureusement Gabriel était obligé de fuir son pays le Burkina Faso en 2017 pour se réfugier au Canada pour sa sécurité parce que son pays natal a basculé dans un cycle infernal de violence causée par un terrorisme sanguinaire. Présentement Gabriel est un résident permanent Canadien. Il veut continuer de faire vivre la vision de Tiki N'Yiki dont il s'est fixée, de loin, afin d'aider dans l'éducation et l'épanouissement des enfants handicapés pour qu'ils rencontrent des opportunités et pouvoir réaliser leurs rêves.
+                Malheureusement et heureusement Gabriel était obligé de fuir son pays le Burkina Faso en 2017 pour se réfugier au Canada pour sa sécurité parce que son pays natal a basculé dans un cycle infernal de violence causée par un terrorisme sanguinaire. Présentement Gabriel est un résident permanent Canadien et veut étudier en Programmation Informatique. Néanmoins il souhaite continuer la vision de Tiki N'Yiki dont il s'est fixée, ne serait-ce que de loin afin de soutenir l'éducation des enfants handicapés et leur permettre d'avoir des opportunités et pouvoir réaliser leurs rêves.
                 <br>
                 <br>
                   </p> 
