--- a/index.html
+++ b/index.html
@@ -1265,20 +1265,22 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                   </strong>
                 </span>            
                     <p>
-                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel COMPAORE, une personne handicapée qui a enseigné des enfants handicapés au Burkina Faso. Libre codeur il est en train de développer avec HTML et CSS ce site web statique, portail dont il utilise pour mieux présenter sa vision de Tiki N'Yiki. Il est un passionné de photographie, d'histoire, de géographie, d'architecture et de hockey sur glace. 
+                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel [Gaby], une personne handicapée qui a des décennies d'expériences en ce qui concerne le handicap et la vie des personnes handicapées car il a travaillé dans plusieurs organisations faîtières par les canaux desquelles il a enseigné des enfants handicapés au Burkina Faso. Libre codeur il est en train de développer avec HTML et CSS ce site web statique, portail dont il utilise pour mieux présenter sa vision de Tiki N'Yiki. Il est un passionné de photographie, d'histoire, de géographie, d'architecture et de hockey sur glace. 
                       <br>
                       <br> 
                       Sa motivition résulte d'une éducation familiale dont les parents ont inculqué l'esprit de partage à leurs enfants. Selon lui l'envie d'aider autrui surtout les enfants handicapés, a grandement motivé la création de la vision de TIKI N'YIKI durant l'année 2016 au Burkina Faso, son pays d'origine.
                 <br>
-                Mais bien avant il avait travaillé de 2005 à 2016 comme fondateur, cordonnateur et animateur pour l'association Paas Neere. En 2012 il a été décoré CHEVALIER de l'ordre du Mérite par l'état du Burkina Faso pour ses diverses contributions à l'épanoussement des personnes handicapées de sa région, Ziniaré. 
+                Il a été le fondateur, cordonnateur et animateur de l'association Paas Neere de 2005, année de sa création jusqu'en 2016. En 2012 il a été décoré CHEVALIER de l'ordre du Mérite par l'état du Burkina Faso pour ses diverses contributions à l'épanoussement des personnes handicapées de sa région, Ziniaré. 
                 <br>
                 <br>
-                Et quand il a partagé son idée de projet avec certains de ses ami-es qui l'ont trouvé géniale et l'ont assuré leur soutien total. 
+                En 2016 Gabriel avait déjà ficélé le projet de Tiki N'Yiki. Quand il a partagé son idée avec ses ami-es, certains l'ont trouvée géniale et l'ont assurée leur soutien total. 
                 
-                Au délà des soutiens à travers des donations d'ami-es, la vente d'artisanat dans les festivals d'été, l'idée fondamentale est de bâtir un large réseau de donateurs, d'un conseil d'administration pour mieux encadrer la vision et faire émerger l'idée de projet en résultats concrêts profitant des personnes handicapées dans leurs besoins cibles. Ce fut le début d'un rêve qu'il veut à tout prix réaliser et aider à améliorer les conditions sociales des personnes vulnérables et plus particulièrement les personnes vivant avec un handicap dont les enfants handicapés. 
+                Mais au délà des soutiens sporadiques à travers des donations, de vente d'artisanat (peinture et batik), l'idée fondamentale est de bâtir un large réseau de donateurs et un conseil d'administration réunir un grand nombre de donateurs et/ou de ressources financières pour faire émerger l'idée de projet en résultats concrêts, palpables profitant des personnes handicapées surtout des enfants. 
+                <br>
+                Ce fut le début d'un rêve qu'il veut à tout prix réaliser et aider à améliorer les conditions sociales des personnes vulnérables et plus particulièrement les personnes vivant avec un handicap dont les enfants handicapés. 
                 <br>
                 <br>
-                Malheureusement et heureusement Gabriel était obligé de fuir son pays le Burkina Faso en 2017 pour se réfugier au Canada pour sa sécurité parce que son pays natal a basculé dans un cycle infernal de violence causée par un terrorisme sanguinaire. Présentement Gabriel est un résident permanent Canadien et veut étudier en Programmation Informatique. Néanmoins il souhaite continuer la vision de Tiki N'Yiki dont il s'est fixée, ne serait-ce que de loin afin de soutenir l'éducation des enfants handicapés et leur permettre d'avoir des opportunités et pouvoir réaliser leurs rêves.
+                Malheureusement et heureusement Gabriel était obligé de quitter son pays le Burkina Faso en 2017 pour se réfugier au Canada pour sa sécurité non seulement pour ses opinions politiques mais aussi parce que son pays natal a basculé dans un cycle infernal de violence causée par un terrorisme cruel et sanguinaire. Présentement Gabriel est un résident permanent Canadien et veut étudier en Programmation Informatique pour bien appuyer la vision de Tiki N'Yiki en créant une accadémie d'informatique dont des étudiants handicapés seront des favoris en termes d'enrollement . C'est pour ce faire  qu'il souhaite continuer la vision de loin en mobilisant des fonds pour les projets. Soutenir l'éducation des enfants handicapés afin de les permettre d'avoir des opportunités, pouvoir réaliser leurs rêves a toujours été un crédo perpétuel de Gabriel.
                 <br>
                 <br>
                   </p> 
