--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@ function myFunction() {
         </div>
       </a>
       
-        <a href="https://en.wikipedia.org/wiki/Burkina_Faso" target="_blank">
+        <a href="https://www.google.com/search?client=firefox-b-d&q=online+calculator" target="_blank">
         <div class="Calculator">
           <b style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 13px;">Calculator</b>
         </div>
