--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                  justify-items: center;
                  background: #fff;
                  width: 100%;
-                 height: 120px;
+                 height: 125px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
@@ -180,7 +180,7 @@
   align-items: center;
   width: 73px;
   height: 75px;
-  font-size: 11px;
+  font-size: 10.5px;
   font-family: 'arial black';
   border-radius: 50%;
   background: -webkit-linear-gradient(#ff3006 0%,#ff0 100%); 
@@ -447,7 +447,7 @@ hr{
    
 }
 ::-webkit-scrollbar-track-piece{
-    background: rgba(248, 248, 248, 0.925);
+    background: rgba(213, 213, 213, 0.925);
     padding: 10px;
 }
 ::-webkit-scrollbar-thumb{
@@ -585,7 +585,7 @@ hr{
     justify-items: left;
     justify-content: center;
     text-align: left;
-    width: 73%;
+    width: 73.5%;
     height: auto;
     font-family:  'helvetica'; 
     font-size: 1.1rem; 
@@ -616,13 +616,12 @@ hr{
 
 .Cartes{
   display: grid;
-  row-gap: 0.25rem;
   grid-template-rows: 1.5fr 0.5fr;
   justify-content: center;
   justify-items: center;
   padding: 10px;
-  height: 775px;
-  width: 73.25%;
+  height: 765px;
+  width: 73.5%;
 }
 
 .CRT1{
@@ -1275,7 +1274,7 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                 <br>
                 En 2016 Gabriel avait déjà ficélé le projet de Tiki N'Yiki. Quand il a partagé son idée avec ses ami-es, certains l'ont trouvée géniale et l'ont assurée leur soutien total. 
                 
-                Mais au délà des soutiens sporadiques à travers des donations, de vente d'artisanat (peinture et batik), l'idée fondamentale est de bâtir un large réseau de donateurs et un conseil d'administration réunir un grand nombre de donateurs et/ou de ressources financières pour faire émerger l'idée de projet en résultats concrêts, palpables profitant des personnes handicapées surtout des enfants. 
+                Mais au délà des soutiens sporadiques à travers des donations, de vente d'artisanat (peinture et batik), l'idée fondamentale est de bâtir un large réseau de donateurs et un conseil d'administration pouvoir s'assurer de ressources financières pour faire émerger l'idée de projet en résultats concrêts, palpables profitant des personnes handicapées surtout des enfants. 
                 <br>
                 Ce fut le début d'un rêve qu'il veut à tout prix réaliser et aider à améliorer les conditions sociales des personnes vulnérables et plus particulièrement les personnes vivant avec un handicap dont les enfants handicapés. 
                 <br>
