--- a/index.html
+++ b/index.html
@@ -1264,17 +1264,17 @@ Dépendemment de leurs régions de vie, peu d'entre elles iront à l'école afin
                   </strong>
                 </span>            
                     <p>
-                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel [Gaby], une personne handicapée qui a des décennies d'expériences en ce qui concerne le handicap et la vie des personnes handicapées car il a travaillé dans plusieurs organisations faîtières par les canaux desquelles il a enseigné des enfants handicapés au Burkina Faso. Libre codeur il est en train de développer avec HTML et CSS ce site web statique, portail dont il utilise pour mieux présenter sa vision de Tiki N'Yiki. Il est un passionné de photographie, d'histoire, de géographie, d'architecture et de hockey sur glace. 
+                      <br>La vision de Tiki N'Yiki a pour force motrice Gabriel [Gaby], une personne handicapée qui a plusieurs années d'expérience en ce qui concerne le handicap et la vie des personnes handicapées. Il a travaillé dans plusieurs organisations faîtières par les canaux desquelles il a enseigné des enfants handicapés, animé des journées de sensibilisation par rapport au handicap et l'inclusion sociale au Burkina Faso. Libre codeur il est en train de développer ce site web statique en HTML et CSS pour présenter sa vision de Tiki N'Yiki. Il est un passionné de photographie, d'histoire, de géographie, d'architecture et de hockey sur glace. 
                       <br>
                       <br> 
                       Sa motivition résulte d'une éducation familiale dont les parents ont inculqué l'esprit de partage à leurs enfants. Selon lui l'envie d'aider autrui surtout les enfants handicapés, a grandement motivé la création de la vision de TIKI N'YIKI durant l'année 2016 au Burkina Faso, son pays d'origine.
                 <br>
-                Il a été le fondateur, cordonnateur et animateur de l'association Paas Neere de 2005, année de sa création jusqu'en 2016. En 2012 il a été décoré CHEVALIER de l'ordre du Mérite par l'état du Burkina Faso pour ses diverses contributions à l'épanoussement des personnes handicapées de sa région, Ziniaré. 
+                Il a été le fondateur, cordonnateur et animateur de l'association Paas Neere de 2005, année de sa création jusqu'en 2016. En 2012 il a été décoré CHEVALIER de l'ORDRE du Mérite du Burkina Faso pour ses diverses contributions y compris la création du Centre Paas Neere à Ziniaré. 
                 <br>
                 <br>
-                En 2016 Gabriel avait déjà ficélé le projet de Tiki N'Yiki. Quand il a partagé son idée avec ses ami-es, certains l'ont trouvée géniale et l'ont assurée leur soutien total. 
+                En 2016 Gabriel nourrit d'autres ambitions. Le projet de Tiki N'Yiki avait déjà été ficélé ou presque. Quand il a partagé son idée avec ses ami-es, certains l'ont trouvée intéressante et souhaitent que le projet se réalise et grandisse. Ainsi la plupart a organisé des évènements de fundraising, de levée de fonds soit entre ami-es, groupes d'ami-ies, soit participer à une foire expo-vente d'artisanat et conférence. 
                 
-                Mais au délà des soutiens sporadiques à travers des donations, de vente d'artisanat (peinture et batik), l'idée fondamentale est de bâtir un large réseau de donateurs et un conseil d'administration pouvoir s'assurer de ressources financières pour faire émerger l'idée de projet en résultats concrêts, palpables profitant des personnes handicapées surtout des enfants. 
+                Mais au délà des soutiens sporadiques à travers des donations, de vente d'artisanat (peinture et batik), l'idée fondamentale est de bâtir un large réseau de donateurs et un conseil d'administration et pouvoir s'assurer de ressources financières pour faire émerger l'idée de projet en résultats concrêts, palpables durables profitant des personnes handicapées dont les enfants. 
                 <br>
                 Ce fut le début d'un rêve qu'il veut à tout prix réaliser et aider à améliorer les conditions sociales des personnes vulnérables et plus particulièrement les personnes vivant avec un handicap dont les enfants handicapés. 
                 <br>
